# oneflow-xrt

./: .gitignore  CMakeLists.txt  README.md  dev-requirements.txt  setup.py
cmake/: absl.cmake  flatbuffers.cmake  glog.cmake  oneflow.cmake  openvino.cmake  protobuf.cmake  pybind11.cmake  python.cmake  tensorflow-xla.cmake  tensorrt.cmake  third_party.cmake  util.cmake
cmake/tools/: create_python_module.py
oneflow_xrt/: CMakeLists.txt  launch_kernel.cpp  launch_op.cpp  version_script.lds  xrt.fbs  xrt.proto  xrt_launch_kernel.cpp  xrt_launch_op.cpp  xrt_no_op.cpp
oneflow_xrt/api/: api.cpp  api.h  api_internal.cpp  api_internal.h  api_serving.cpp  api_serving.h
oneflow_xrt/common/: device.cpp  device.h  env.h  flatbuffers.cpp  flatbuffers.h  protobuf.cpp  protobuf.h  registry.h  shape_util.h  typedef.h
oneflow_xrt/compiler/: compilation_cache.cpp  compilation_cache.h  executable.h  graph_compiler.h  parameter.h
oneflow_xrt/compiler/kernel/: op_context.h  op_kernel.h  op_kernel_registry.h  op_kernel_registry_id.h
oneflow_xrt/compiler/openvino/: inference_engine_data_desc.h  ngraph_shape.h  openvino_executable.cpp  openvino_executable.h  openvino_graph_compiler.cpp  openvino_graph_compiler.h
oneflow_xrt/compiler/openvino/ops/: add_op.cpp  argument_op.cpp  batch_norm_op.cpp  concat_op.cpp  convolution_op.cpp  leaky_relu_op.cpp  matmul_op.cpp  op_context.cpp  op_context.h  op_kernel.h  relu_op.cpp  reshape_op.cpp  upsample_op.cpp
oneflow_xrt/compiler/passes/: build_subgraph_pass.cpp  build_subgraph_pass.h  cluster.cpp  cluster.h  mark_cluster_id_pass.cpp  mark_cluster_id_pass.h  options.h  rebuild_job_pass.cpp  shape_inference_context.h  shape_inference_options.h  shape_inference_pass.cpp  trainable_propagation_pass.cpp  trainable_propagation_pass.h
oneflow_xrt/compiler/tensorrt/: common.h  trt_builder.cpp  trt_builder.h  trt_executable.cpp  trt_executable.h  trt_graph_compiler.cpp  trt_graph_compiler.h  trt_helpers.cpp  trt_helpers.h  trt_int8_calibrator.cpp  trt_int8_calibrator.h  trt_logger.cpp  trt_logger.h  trt_plugin.h  trt_shape.h  trt_unique_ptr.h  trt_value.h
oneflow_xrt/compiler/tensorrt/ops/: activation_op.cpp  argument_op.cpp  batch_norm_op.cpp  bias_add_op.cpp  broadcast_binary_grad_ops.cpp  broadcast_binary_ops.cpp  broadcast_like_op.cpp  cast_op.cpp  concat_op.cpp  convolution_grad_op.cpp  convolution_op.cpp  deconvolution_op.cpp  element_wise_op.cpp  expand_dims.cpp  identity_op.cpp  matmul_op.cpp  multiply_op.cpp  narrow.cpp  op_context.cpp  op_context.h  op_kernel.h  pad_grad_op.cpp  pad_op.cpp  pooling_op.cpp  prelu_grad_op.cpp  reduce_op.cpp  reshape_op.cpp  scalar_binary_ops.cpp  scalar_pow_grad_op.cpp  softmax_op.cpp  topk_op.cpp  transpose_op.cpp  unary_grad_ops.cpp  unary_ops.cpp  upsample_op.cpp  variable_op.cpp
oneflow_xrt/compiler/tensorrt/plugin/: broadcast_like_plugin.cpp  broadcast_like_plugin.h
oneflow_xrt/compiler/xla/: xla_allocator.cpp  xla_allocator.h  xla_data_type.cpp  xla_data_type.h  xla_executable.cpp  xla_executable.h  xla_executable_context.cpp  xla_executable_context.h  xla_executable_scope.h  xla_graph_compiler.cpp  xla_graph_compiler.h  xla_helpers.cpp  xla_helpers.h  xla_macro.h  xla_resource_manager.cpp  xla_resource_manager.h  xla_shape.cpp  xla_shape.h
oneflow_xrt/compiler/xla/memory/: device_buffer_allocator.h  device_memory_pool.cpp  device_memory_pool.h
oneflow_xrt/compiler/xla/ops/: activation_grad_op.cpp  adam_optimizer_op.cpp  add_op.cpp  argument_op.cpp  batch_matmul_op.cpp  bias_add_op.cpp  binary_op.h  broadcast_binary_op.cpp  cast_op.cpp  fc_op.cpp  gather.cpp  layer_norm_op.cpp  matmul_op.cpp  op_context.cpp  op_context.h  op_kernel.h  optimizer_op.h  reduce_op.cpp  reshape_op.cpp  scalar_binary_op.cpp  softmax_op.cpp  square_sum_op.cpp  transpose_op.cpp  unary_op.cpp  unary_op.h
oneflow_xrt/graph/: algorithm.h  argument.h  graph.cpp  graph.h  graph_util.cpp  node.cpp  node.h  node_util.cpp  node_util.h
oneflow_xrt/int8_calibration/: calibration.cpp  calibration.h  calibration_mode.cpp  calibration_mode.h
oneflow_xrt/python/: CMakeLists.txt  graph.cpp  init_module.cpp  int8_calibration.cpp  openvino_stub.cpp  options.cpp  stub.cpp  tensorrt_stub.cpp  xla_stub.cpp
python/: .gitignore  setup.py
python/oneflow_xrt/: __init__.py  calibration_mode.py  graph.py  import_engine.py  module.py
python/oneflow_xrt_openvino/: __init__.py
python/oneflow_xrt_tensorrt/: __init__.py
python/oneflow_xrt_xla/: __init__.py
python/tools/: utils.py
tools/: env.py
